# f-ck

./: ARCHITECTURE.md  Cargo.toml  README.md  example.csv  mise.toml  out  output_cached.csv  output_final.csv  query-schema.json
.claude/: settings.local.json
node/: Cargo.toml  pnpm-lock.yaml
node/src/: lib.rs
plans/: phase1-basic-csv-join.json
prd/: initial-design.json  initial-design.md
site/: .modules.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
site/.pnpm/: lock.yaml
site/src/: App.tsx  index.css  types.ts
site/src/components/: DestinationNode.tsx  MappingNode.tsx  Sidebar.tsx  SourceNode.tsx  base-node.tsx  labeled-group-node.tsx
src/: lib.rs  main.rs
src/dsl/: mod.rs  query.rs
src/engine/: cached_engine.rs  ir.rs  joiner.rs  mod.rs  reader.rs  salsa_db.rs  writer.rs
test_data/: basic_query.json  olist_query.json  orders.csv  query-schema.json  test_query.json
test_data/fixtures/: identity.json  join_files.json
tests/: column_type_inference_tests.rs  fixtures.rs  ordered_join_tests.rs  query_execution_snapshots.rs  salsa_operations_tests.rs  test_data_generator.rs  v1_compatibility.rs
tests/snapshots/: column_type_inference_tests__basic_type_inference.snap  column_type_inference_tests__date_type_inference.snap  column_type_inference_tests__geography_type_detection.snap  column_type_inference_tests__mixed_type_detection.snap  column_type_inference_tests__name_type_detection.snap  column_type_inference_tests__null_handling.snap  column_type_inference_tests__numeric_type_inference.snap  column_type_inference_tests__partial_scan_types.snap  column_type_inference_tests__type_range_tracking.snap  dsl_tests__column_merge_policies.snap  dsl_tests__complex_transitive_closure.snap  dsl_tests__filter_select_operations.snap  dsl_tests__multi_source_link.snap  dsl_tests__simple_load.snap  fixtures__fixture-2.snap  query_execution_snapshots__aggregation_query_error.snap  query_execution_snapshots__aggregation_query_execution_error.snap  query_execution_snapshots__all_merge_policy_types.snap  query_execution_snapshots__basic_query_output.snap  query_execution_snapshots__basic_query_structure.snap  query_execution_snapshots__comprehensive_merge_policies_output.snap  query_execution_snapshots__comprehensive_merge_policies_query.snap  query_execution_snapshots__comprehensive_query_error.snap  query_execution_snapshots__destination_schema.snap  query_execution_snapshots__error_missing_file_validation.snap  query_execution_snapshots__first_match_mappings.snap  query_execution_snapshots__mapping_policies.snap  query_execution_snapshots__primary_key_config.snap  query_execution_snapshots__primary_key_configurations.snap  query_execution_snapshots__schema_analysis.snap  query_execution_snapshots__small_data_execution_error.snap  query_execution_snapshots__small_data_query_error.snap  query_execution_snapshots__small_data_query_structure.snap  query_execution_snapshots__small_data_schema_customers.snap  query_execution_snapshots__small_data_schema_orders.snap  query_execution_snapshots__source_field_coverage.snap  query_execution_snapshots__source_validation_results.snap  query_execution_snapshots__sum_aggregation_mapping.snap  salsa_operations_tests__cache_stats.snap  salsa_operations_tests__incremental_results.snap  (+16 more)
