[package]
name = "f-ck"
version = "0.1.0"
edition = "2024"
description = "Fields combined with columnar keys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arlyon/f-ck"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
indexmap = "2.11.4"
polars = { version = "0.51.0", features = ["lazy", "fmt", "sql"], default-features = false }
polars-ops = "0.51.0"
polars-sql = "0.51.0"
regex = "1.11.2"
schemars = { version = "1.0.4", features = ["derive"] }
serde = "1.0.225"
serde_json = "1.0.145"
traced-test = "1.0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-test = "0.2.5"
wasm-bindgen = { version = "0.2.103", optional = true }
wasm-bindgen-futures = { version = "0.4.53", optional = true }
web-sys = { version = "0.3.80", optional = true }

[dev-dependencies]
csv = "1.3.1"
dir-test = "0.4.1"
fake = "4.4.0"
insta = { version = "1.43.2", features = ["yaml"] }
tempfile = "3.22.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[features]
default = ["csv-support"]
csv-support = ["polars/csv"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
wasm-bindgen = ["dep:wasm-bindgen"]
wasm-bindgen-futures = ["dep:wasm-bindgen-futures"]
web-sys = ["dep:web-sys"]
